--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		
 		
 		<script src="polygon.js" ></script>
-		<script src="node_modules/jquery/dist/jquery.min.js" ></script>
-		<script src="node_modules/three/three.min.js" ></script>
+		<script src="external/jquery.min.js" ></script>
+		<script src="external/three.min.js" ></script>
 		<script src="external/cannon.js" ></script>
 		<script src="external/html2canvas.js" ></script>
 		<script src="intro.js"></script>
